--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -28,6 +28,11 @@
     width: 12px;
     background: #fff;
     box-shadow: 0 4px #fff, 0 -4px #fff;
+    transition: transform .3s;
+  }
+
+  .js [data-menu="button"].active::before{
+    transform: rotate(90deg);
   }
 
   .js [data-menu="list"]{
@@ -38,7 +43,12 @@
     padding: 60px 0 20px 0;
     top: 0;
     box-shadow: 2px 2px 2px 0 rgba(0,0,0,.2);
+    display: none;
+  }
+
+  .js [data-menu="list"].active{
     display: block;
+    animation: show-right .3s forwards;
   }
 
   .js .dropdown-menu{
