--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,7 @@
 @import 'tooltip.css';
 @import 'dropdown-menu.css';
 @import 'menu-mobile.css';
+@import 'numeros.css';
+
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap');
